Funcionalidade de contato

--- a/src/app/pages/home/timeline/timeline.component.css
+++ b/src/app/pages/home/timeline/timeline.component.css
@@ -23,8 +23,8 @@ body {
   height: 500px;
   color: #fff;
   overflow: hidden;
-  -webkit-transition: width 0.5s ease;
-  transition: width 0.5s ease;
+  /*-webkit-transition: width 0.5s ease;*/
+  /*transition: width 0.5s ease;*/
   display: inline-block;
 }
 .tl-item:before, .tl-item:after {
@@ -38,7 +38,7 @@ body {
   height: 100%;
 }
 .tl-item:after {
-  background: rgba(3, 22, 37, 0.85);
+  background: rgba(3, 22, 37, 0.55);
   opacity: 1;
   -webkit-transition: opacity 0.5s ease;
   transition: opacity 0.5s ease;
@@ -50,10 +50,10 @@ body {
   opacity: 0;
   -webkit-transform: translate3d(0, 0, 0) translateY(50%);
           transform: translate3d(0, 0, 0) translateY(50%);
-  -webkit-transition: opacity 0.5s ease, -webkit-transform 0.5s ease;
-  transition: opacity 0.5s ease, -webkit-transform 0.5s ease;
-  transition: opacity 0.5s ease, transform 0.5s ease;
-  transition: opacity 0.5s ease, transform 0.5s ease, -webkit-transform 0.5s ease;
+  -webkit-transition: opacity 2.5s ease, -webkit-transform 2.5s ease;
+  transition: opacity 2.5s ease, -webkit-transform 2.5s ease;
+  transition: opacity 2.5s ease, transform 2.5s ease;
+  transition: opacity 2.5s ease, transform 2.5s ease, -webkit-transform 2.5s ease;
 }
 .tl-item:hover .tl-year{
   display: none;
@@ -65,10 +65,10 @@ body {
   opacity: 1;
   -webkit-transform: translate3d(0, 0, 0) translateY(0);
           transform: translate3d(0, 0, 0) translateY(0);
-  -webkit-transition: opacity 1s ease, -webkit-transform 1s ease 0.25s;
-  transition: opacity 1s ease, -webkit-transform 1s ease 0.25s;
-  transition: opacity 1s ease, transform 1s ease 0.25s;
-  transition: opacity 1s ease, transform 1s ease 0.25s, -webkit-transform 1s ease 0.25s;
+  -webkit-transition: opacity 2s ease, -webkit-transform 2s ease 0.25s;
+  transition: opacity 2s ease, -webkit-transform 2s ease 0.25s;
+  transition: opacity 2s ease, transform 2s ease 0.25s;
+  transition: opacity 2s ease, transform 2s ease 0.25s, -webkit-transform 2s ease 0.25s;
 }
 .tl-item:hover .tl-content {
   opacity: 1;
@@ -129,8 +129,8 @@ body {
   transition: -webkit-filter 0.5s ease;
   transition: filter 0.5s ease;
   transition: filter 0.5s ease, -webkit-filter 0.5s ease;
-  -webkit-filter: grayscale(100%);
-          filter: grayscale(100%);
+  /*-webkit-filter: grayscale(100%);
+          filter: grayscale(100%);*/
 }
 .display-flex {
 	display: flex!important;
