--- a/src/app/pages/properties/properties.component.html
+++ b/src/app/pages/properties/properties.component.html
@@ -201,7 +201,7 @@
 													<li><p class="justfy-text font-124">existência de serviços na região de destino que sejam essenciais à inclusão social da família.</p></li>
 												</ul>
 												<div class="single_tab_img">
-													<img src="assets/images/localizacao.jpg" alt="" style="margin-top:20px;" />
+													<img src="assets/images/cozinha.jpg" alt="" style="margin-top:20px;" />
 												</div>
 											</div>
 											<!--                                                        <div id="pentagon"></div>-->
