--- a/src/app/pages/contact/contact.component.html
+++ b/src/app/pages/contact/contact.component.html
@@ -81,11 +81,17 @@
                                 <div class="separator"></div>
                             </div>
                             <div class="single_contant_left">
-                                <form (ngSubmit)="onSubmit()" #contactForm="ngForm" novalidate>
+                                <form id="id-contactForm" (ngSubmit)="onSubmit(contactForm)" #contactForm="ngForm">
                                     <!--<div class="col-lg-8 col-md-8 col-sm-10 col-lg-offset-2 col-md-offset-2 col-sm-offset-1">-->
 									<div class="row">
-										<div class="alert alert-info" role="alert" [hidden]="contactForm.form.valid">
+										<!-- <div class="alert alert-info" role="alert" [hidden]="contactForm.form.valid">
 											Preencha todos os campos
+										</div> -->
+										<div class="alert alert-success" role="alert" [hidden]="!success">
+											Mensagem enviada com sucesso!
+										</div>
+										<div class="alert alert-error" role="alert" [hidden]="!error">
+											Não foi possivel enviar a mensagem!
 										</div>
 									</div>
                                     <div class="row">
@@ -128,6 +134,7 @@
                                     <div class="">
                                         <input type="submit" value="Enviar" class="btn btn-primary" [disabled]="!contactForm.form.valid">
                                     </div>
+									<span>* Preencha todos os campos</span>
                                     <!--</div>-->
                                 </form>
                             </div>
