--- a/src/app/pages/home/timeline/timeline.component.html
+++ b/src/app/pages/home/timeline/timeline.component.html
@@ -37,7 +37,7 @@
 							<p class="f2 heading--sanSerif">{{event.item1.date | humanizeDate}}</p>
 						</div>
 						<div class="tl-content">
-							<h1>{{event.item1.title}}</h1>
+							<h1>{{event.item1.title}}</h1><br>
 							<p style="font-size: 1.24rem;">{{event.item1.text}}</p>
 						</div>
 					</div>
@@ -48,7 +48,7 @@
 							<p class="f2 heading--sanSerif">{{event.item2.date | humanizeDate}}</p>
 						</div>
 						<div class="tl-content">
-							<h1>{{event.item2.title}}</h1>
+							<h1>{{event.item2.title}}</h1><br>
 							<p style="font-size: 1.24rem;">{{event.item2.text}}</p>
 						</div>
 					</div>
@@ -59,7 +59,7 @@
 							<p class="f2 heading--sanSerif">{{event.item3.date | humanizeDate}}</p>
 						</div>
 						<div class="tl-content">
-							<h1>{{event.item3.title}}</h1>
+							<h1>{{event.item3.title}}</h1><br>
 							<p style="font-size: 1.24rem;">{{event.item3.text}}</p>
 						</div>
 					</div>
@@ -70,7 +70,7 @@
 							<p class="f2 heading--sanSerif">{{event.item4.date | humanizeDate}}</p>
 						</div>
 						<div class="tl-content">
-							<h1>{{event.item4.title}}</h1>
+							<h1>{{event.item4.title}}</h1><br>
 							<p style="font-size: 1.24rem;">{{event.item4.text}}</p>
 						</div>
 					</div>
