--- a/src/app/pages/visual-identity/visual-identity.component.html
+++ b/src/app/pages/visual-identity/visual-identity.component.html
@@ -26,7 +26,7 @@
 		<div class="row">
 			<div class="main_about_area sections" style="padding-top:0;padding-bottom:0;">
 				<div class="col-sm-6">
-					<span class="concilia-credit">
+					<span>
 						<i class="fa fa-user"></i>
 						&nbsp;&nbsp;Bruno Santos
 					</span>
