--- a/src/app/pages/gallery-detail/gallery-detail.component.html
+++ b/src/app/pages/gallery-detail/gallery-detail.component.html
@@ -1,20 +1,32 @@
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<div class="popup-gallery">
-	<a href="http://farm9.staticflickr.com/8242/8558295633_f34a55c1c6_b.jpg" title="The Cleaner" description="kjskjsdjsnafd"><img src="http://farm9.staticflickr.com/8242/8558295633_f34a55c1c6_b.jpg" width="300" height="300"></a>
-	<a href="http://farm9.staticflickr.com/8382/8558295631_0f56c1284f_b.jpg" title="Winter Dance" description="kjskjsdjsnafd"><img src="http://farm9.staticflickr.com/8382/8558295631_0f56c1284f_b.jpg" width="300" height="300"></a>
-	<a href="http://farm9.staticflickr.com/8225/8558295635_b1c5ce2794_b.jpg" title="The Uninvited Guest" description="kjskjsdjsnafd"><img src="http://farm9.staticflickr.com/8225/8558295635_b1c5ce2794_s.jpg" width="300" height="300"></a>
-	<a href="http://farm9.staticflickr.com/8383/8563475581_df05e9906d_b.jpg" title="Oh no, not again!" description="kjskjsdjsnafd"><img src="http://farm9.staticflickr.com/8383/8563475581_df05e9906d_s.jpg" width="300" height="300"></a>
-	<a href="http://farm9.staticflickr.com/8235/8559402846_8b7f82e05d_b.jpg" title="Swan Lake" description="kjskjsdjsnafd"><img src="http://farm9.staticflickr.com/8235/8559402846_8b7f82e05d_s.jpg" width="300" height="300"></a>
-	<a href="http://farm9.staticflickr.com/8235/8558295467_e89e95e05a_b.jpg" title="The Shake" description="kjskjsdjsnafd"><img src="http://farm9.staticflickr.com/8235/8558295467_e89e95e05a_s.jpg" width="300" height="300"></a>
-	<a href="http://farm9.staticflickr.com/8378/8559402848_9fcd90d20b_b.jpg" title="Who's that, mommy?" description="kjskjsdjsnafd"><img src="http://farm9.staticflickr.com/8378/8559402848_9fcd90d20b_s.jpg" width="300" height="300"></a>
-	<a class="popup-youtube" href="http://www.youtube.com/watch?v=0O2aH4XLbto"><img src="http://farm9.staticflickr.com/8378/8559402848_9fcd90d20b_s.jpg" width="300" height="300"></a>
-	<a href="http://farm9.staticflickr.com/8235/8558295467_e89e95e05a_b.jpg" title="The Shake" description="kjskjsdjsnafd"><img src="http://farm9.staticflickr.com/8235/8558295467_e89e95e05a_s.jpg" width="300" height="300"></a>
-	<a href="http://farm9.staticflickr.com/8378/8559402848_9fcd90d20b_b.jpg" title="Who's that, mommy?" description="kjskjsdjsnafd"><img src="http://farm9.staticflickr.com/8378/8559402848_9fcd90d20b_s.jpg" width="300" height="300"></a>
-	<iframe width="560" height="315" src="https://www.youtube.com/embed/LuDLSFob6GA" frameborder="0" allowfullscreen></iframe>
-</div>
+<section id="home" class="home">
+	<div class="overlay overlay-min">
+		<div class="container">
+			<div class="row">
+				<div class="col-sm-12 ">
+					<h1 style="text-align: -webkit-center;">
+						<img src="assets/images/logoconcilia.png" alt="Logo do concilia" style="max-width:60%;margin-top: 150px;">
+					</h1>
+				</div>
+			</div>
+		</div>
+	</div>
+</section>
+<section id="choose" class="choose">
+	<div class="container">
+		<div class="row">
+			<div class="main_choose sections">
+				<div class="col-sm-12">
+					<div class="head_title" style="margin-bottom: 50px;">
+						<h3 style="font-size: 3rem;">{{gallery.title}}</h3>
+						<div class="separator"></div>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="row" style="margin-bottom:50px; ">
+			<div class="popup-gallery">
+				<a *ngFor="let photo of gallery?.photos" href="{{photo?.photo}}" [attr.title]="photo?.credit" [attr.description]="photo?.legend"><img class="photo" src="{{photo?.photo}}" width="400" height="auto"></a>
+			</div>
+		</div>
+	</div>
+</section>
