--- a/src/app/pages/contact/contact.component.html
+++ b/src/app/pages/contact/contact.component.html
@@ -44,7 +44,7 @@
                                                 </div>
                                                 <div class="single_info_text">
                                                     <h3>Nosso email</h3>
-                                                    <p class="font-124">xxxxxx@conciliabr381eanel.com.br</p>
+                                                    <p class="font-124">conciliaanel@gmail.com</p>
                                                 </div>
                                             </div>
                                         </div>
