Correções na página de imóveis

--- a/src/app/pages/properties/properties.component.html
+++ b/src/app/pages/properties/properties.component.html
@@ -75,7 +75,16 @@
 
 											<div class="col-sm-6">
 												<div class="single_tab_img">
+													<span class="concilia-credit">
+														<i class="fa fa-user"></i>
+														&nbsp;&nbsp;
+													</span>
 													<img src="assets/images/banco-imoveis.jpg" alt="" />
+													<span class="concilia-caption">
+														<i class="fa fa-camera"></i>
+														&nbsp;&nbsp;
+													</span>
+
 												</div>
 											</div>
 										</div>
@@ -109,7 +118,15 @@
 
 											<div class="col-sm-6">
 												<div class="single_tab_img">
-													<img src="assets/images/embreve.png" alt="" />
+													<!-- <span class="concilia-credit">
+														<i class="fa fa-user"></i>
+														&nbsp;&nbsp;
+													</span>
+													<img src="assets/images/banco-imoveis.jpg" alt="" />
+													<span class="concilia-caption">
+														<i class="fa fa-camera"></i>
+														&nbsp;&nbsp;
+													</span> -->
 												</div>
 											</div>
 										</div>
@@ -151,7 +168,16 @@
 
 											<div class="col-sm-6">
 												<div class="single_tab_img">
+													<span class="concilia-credit">
+														<i class="fa fa-user"></i>
+														&nbsp;&nbsp;
+													</span>
 													<img src="assets/images/caracteristicas-imoveis.jpg" alt="" />
+													<span class="concilia-caption">
+														<i class="fa fa-camera"></i>
+														&nbsp;&nbsp;
+													</span>
+
 												</div>
 											</div>
 										</div>
@@ -201,7 +227,16 @@
 													<li><p class="justfy-text font-124">existência de serviços na região de destino que sejam essenciais à inclusão social da família.</p></li>
 												</ul>
 												<div class="single_tab_img">
-													<img src="assets/images/cozinha.jpg" alt="" style="margin-top:20px;" />
+													<span class="concilia-credit" style="margin-top:20px;">
+														<i class="fa fa-user"></i>
+														&nbsp;&nbsp;
+													</span>
+													<img src="assets/images/cozinha.jpg" alt="" />
+													<span class="concilia-caption">
+														<i class="fa fa-camera"></i>
+														&nbsp;&nbsp;
+													</span>
+
 												</div>
 											</div>
 											<!--                                                        <div id="pentagon"></div>-->
@@ -230,7 +265,16 @@
 
 											<div class="col-sm-6">
 												<div class="single_tab_img">
+													<span class="concilia-credit">
+														<i class="fa fa-user"></i>
+														&nbsp;&nbsp;
+													</span>
 													<img src="assets/images/localizacao.jpg" alt="" />
+													<span class="concilia-caption">
+														<i class="fa fa-camera"></i>
+														&nbsp;&nbsp;
+													</span>
+
 												</div>
 											</div>
 										</div>
