inserção das legendas

--- a/src/app/pages/properties/properties.component.html
+++ b/src/app/pages/properties/properties.component.html
@@ -77,12 +77,12 @@
 												<div class="single_tab_img">
 													<span class="concilia-credit">
 														<i class="fa fa-user"></i>
-														&nbsp;&nbsp;
+														&nbsp;&nbsp;Lilia Nogueira
 													</span>
 													<img src="assets/images/banco-imoveis.jpg" alt="" />
 													<span class="concilia-caption">
 														<i class="fa fa-camera"></i>
-														&nbsp;&nbsp;
+														&nbsp;&nbsp;São 21 unidades habitacionais disponíveis em Betim, na Região Metropolitana de BH
 													</span>
 
 												</div>
@@ -170,12 +170,12 @@
 												<div class="single_tab_img">
 													<span class="concilia-credit">
 														<i class="fa fa-user"></i>
-														&nbsp;&nbsp;
+														&nbsp;&nbsp;Lilia Nogueira
 													</span>
 													<img src="assets/images/caracteristicas-imoveis.jpg" alt="" />
 													<span class="concilia-caption">
 														<i class="fa fa-camera"></i>
-														&nbsp;&nbsp;
+														&nbsp;&nbsp;Unidades Habitacionais no município de Esmeraldas. São 64 unidades disponíveis de dois quartos
 													</span>
 
 												</div>
@@ -229,12 +229,12 @@
 												<div class="single_tab_img">
 													<span class="concilia-credit" style="margin-top:20px;">
 														<i class="fa fa-user"></i>
-														&nbsp;&nbsp;
+														&nbsp;&nbsp;Irineu Evangelista
 													</span>
-													<img src="assets/images/cozinha.jpg" alt="" />
+													<img src="assets/images/014.jpg" alt="" />
 													<span class="concilia-caption">
 														<i class="fa fa-camera"></i>
-														&nbsp;&nbsp;
+														&nbsp;&nbsp;A equipe técnica e social do Programa acompanha os beneficiários na visita às novas moradias
 													</span>
 
 												</div>
@@ -267,12 +267,12 @@
 												<div class="single_tab_img">
 													<span class="concilia-credit">
 														<i class="fa fa-user"></i>
-														&nbsp;&nbsp;
+														&nbsp;&nbsp;Irineu Evangelista
 													</span>
 													<img src="assets/images/localizacao.jpg" alt="" />
 													<span class="concilia-caption">
 														<i class="fa fa-camera"></i>
-														&nbsp;&nbsp;
+														&nbsp;&nbsp;Um dos imóveis do tipo apartamento prospectados no município de Nova Era
 													</span>
 
 												</div>
