Correções de textos

--- a/src/app/pages/action-plan/action-plan.component.html
+++ b/src/app/pages/action-plan/action-plan.component.html
@@ -28,47 +28,47 @@
 				<div class="col-sm-6">
 					<p class="font-124">O Plano de Providências é um documento elaborado pelo Departamento Nacional de Infraestrutura de Transportes - DNIT com o objetivo de apresentar ações e soluções que o órgão entende como necessárias para viabilizar o reassentamento definitivo das famílias cadastradas no Concilia BR-381 e Anel.</p>
 					<p class="font-124">Além pretender o cumprimento das decisões judiciais proferidas no âmbito da Ação Civil Pública, o documento é fruto de intenso processo dialógico. Nele, foram incorporadas críticas e contribuições de todas as partes envolvidas no processo, bem como consolidados instrumentos que possibilitarão minimizar as divergências e alcançar a eficácia na execução das ações.</p>
-					<p class="font-124">Como resultado dessas discussões, a proposta do DNIT passou a envolver 12 macroatividades sucessivas e interdependentes, a serem desenvolvidas no período de 20/02/17 a 07/02/18:</p>
+					<p class="font-124">Como resultado dessas discussões, a proposta do DNIT passou a envolver 12 macroatividades, sucessivas e interdependentes, a serem executadas no período de 20/02/17 a 07/02/18:</p>
 					<ul class="single_ab_mision">
 						<li class="col-sm-6 font-124">
 							<i class="fa fa-check-square"></i>
-							Banco de Imóveis;
+							banco de imóveis;
 						</li>
 						<li class="col-sm-6 font-124">
 							<i class="fa fa-check-square"></i>
-							Informações Cadastrais;
+							informações cadastrais;
 						</li>
 						<li class="col-sm-6 font-124">
 							<i class="fa fa-check-square"></i>
-							Estruturação do Escritório do Programa;
+							estruturação do escritório do programa;
 						</li>
 						<li class="col-sm-6 font-124">
 							<i class="fa fa-check-square"></i>
-							Celebração de Acordo Judicial;
+							celebração de acordo judicial;
 						</li>
 						<li class="col-sm-6 font-124">
 							<i class="fa fa-check-square"></i>
-							Definição de Parâmetros e Regras;
+							definição de parâmetros e regras;
 						</li>
 						<li class="col-sm-6 font-124">
 							<i class="fa fa-check-square"></i>
-							Comunicação Institucional;
+							comunicação institucional;
 						</li>
 						<li class="col-sm-6 font-124">
 							<i class="fa fa-check-square"></i>
-							Audiências Públicas;
+							audiências públicas;
 						</li>
 						<li class="col-sm-6 font-124">
 							<i class="fa fa-check-square"></i>
-							Acompanhamento Pré Morar;
+							acompanhamento pré morar;
 						</li>
 						<li class="col-sm-6 font-124">
 							<i class="fa fa-check-square"></i>
-							Aquisição dos Imóveis;
+							aquisição dos imóveis;
 						</li>
 						<li class="col-sm-6 font-124">
 							<i class="fa fa-check-square"></i>
-							Contratação e Execução da Demolição;
+							contratação e execução da demolição;
 						</li>
 					</ul>
 				</div>
