--- a/src/app/pages/criteria/criteria.component.html
+++ b/src/app/pages/criteria/criteria.component.html
@@ -40,39 +40,39 @@
 							<ul class="single_ab_mision">
 								<li class="font-124">
 									<i class="fa fa-check-square"></i>
-									Forma de acesso das famílias ao banco de imóveis;
+									o a acesso das famílias ao banco de imóveis;
 								</li>
 								<li class="font-124">
 									<i class="fa fa-check-square"></i>
-									Critérios para a ordem de escolha dos imóveis;
+									critérios para a ordem de escolha dos imóveis;
 								</li>
 								<li class="font-124">
 									<i class="fa fa-check-square"></i>
-									Regras para manifestação preliminar de interesse;
+									manifestação preliminar de interesse;
 								</li>
 								<li class="font-124">
 									<i class="fa fa-check-square"></i>
-									Regras para visitação dos imóveis pré-selecionados;
+									a visitação dos imóveis pré-selecionados;
 								</li>
 								<li class="font-124">
 									<i class="fa fa-check-square"></i>
-									Regras para a formalização da escolha;
+									a formalização da escolha;
 								</li>
 								<li class="font-124">
 									<i class="fa fa-check-square"></i>
-									Regras para o agendamento da mudança;
+									o agendamento da mudança;
 								</li>
 								<li class="font-124">
 									<i class="fa fa-check-square"></i>
-									Regras para a realização da mudança;
+									a realização da mudança;
 								</li>
 								<li class="font-124">
 									<i class="fa fa-check-square"></i>
-									Planejamento inicial do acompanhamento pré morar;
+									acompanhamento do pré morar;
 								</li>
 								<li class="font-124">
 									<i class="fa fa-check-square"></i>
-									Planejamento inicial do acompanhamento pós morar;
+									acompanhamento do pós morar;
 								</li>
 							</ul><br>
 							<p class="font-124">Esse documento foi revisado e validado pelo Conselho Executivo e, em seguida, homologado na Justiça Federal.</p>
