Texto da parte de perguntas frequentes

--- a/src/app/pages/home/timeline/timeline.component.html
+++ b/src/app/pages/home/timeline/timeline.component.html
@@ -17,6 +17,8 @@
 				<h3 class="font-3rem" style="color:white;">CONHEÇA A HISTÓRIA DO PROGRAMA</h3>
 				<div class="separator"></div>
 			</div>
+			<button class="fa fa-arrow-left fa-3x" aria-hidden="true" (click)="backGroup()"></button>
+			<button class="fa fa-arrow-right fa-3x" aria-hidden="true" (click)="nextGroup()"></button>
 		</div>
 	</div>
 	<div class="row">
