Texto da parte de perguntas frequentes

--- a/src/app/pages/home/about/about.component.html
+++ b/src/app/pages/home/about/about.component.html
@@ -31,7 +31,7 @@
 														<h3 class="font2-3">Concilia</h3>
 														<div class="separator"></div>
 													</div>
-													<p style="font-size: 1.24rem;">O <strong>Concilia BR-381 e Anel - Programa Judicial de Conciliação para Remoção e Reassentamento Humanizados de Famílias do Anel Rodoviário e BR-381</strong> - foi criado em função da necessidade de revitalização dessas rodovias. É uma iniciativa da Justiça Federal e do Departamento Nacional de Infraestrutura de Transportes (DNIT), em parceria com Ministério Público Federal (MPF), Defensoria Pública da União (DPU), Companhia Urbanizadora e de Habitação de Belo Horizonte (URBEL) e Associação das Comunidades de Moradores de Áreas de Risco de Belo Horizonte (CMAR).</p>
+													<p style="font-size: 1.24rem;">O <strong>Concilia BR-381 e Anel - Programa Judicial de Conciliação para Remoção e Reassentamento Humanizados de Famílias do Anel Rodoviário e BR-381</strong> - foi criado em função da necessidade de revitalização dessas rodovias. É uma iniciativa da Justiça Federal e do Departamento Nacional de Infraestrutura de Transportes (DNIT), em parceria com Ministério Público Federal (MPF), Defensoria Pública da União (DPU), Companhia Urbanizadora e de Habitação de Belo Horizonte (URBEL) e Comunidade de Moradores de Áreas de Risco (CMAR).</p>
 												</div>
 											</div>
 
