TExto perguntas frequeentes

--- a/src/app/pages/questions/questions.component.html
+++ b/src/app/pages/questions/questions.component.html
@@ -22,7 +22,7 @@
 					</div>
 					<div class="main_about_area sections" style="padding-top:0;padding-bottom:50px;">
 						<div class="col-sm-12">
-							<p class="font-124">Você está procurando informações sobre o reassentamento humanizado na BR-381 Norte ou no Anel Rodoviário de Belo Horizonte? Veja se encontra a sua resposta na lista de perguntas frequentes abaixo: basta clicar na pergunta que você terá a resposta. Caso prefira, entre contato com a nossa equipe pelo <a [routerLink]="['/contato']">Fale Conosco.</a></p>
+							<p style="font-size:1.4rem;font-weight:600;">Você está procurando informações sobre o reassentamento humanizado na BR-381 Norte ou no Anel Rodoviário de Belo Horizonte? Veja se encontra a sua resposta na lista de perguntas frequentes abaixo: basta clicar na pergunta que você terá a resposta. Caso prefira, entre contato com a nossa equipe pelo <a [routerLink]="['/contato']" style="color:#ff6927;">Fale Conosco</a>.</p>
 						</div>
 					</div>
 					<div class="single_choose">
@@ -55,7 +55,7 @@
 											<p style="font-size: 1.24rem;">{{item.answer}}</p>
 										</div>
 									</div>
-									
+
 								</div>
 							</div>
 						</div>
