--- a/src/app/pages/home/timeline/timeline.component.html
+++ b/src/app/pages/home/timeline/timeline.component.html
@@ -17,11 +17,10 @@
 				<h3 class="font-3rem" style="color:white;">CONHEÇA A HISTÓRIA DO PROGRAMA</h3>
 				<div class="separator"></div>
 			</div>
-			<!-- <button class="fa fa-arrow-left fa-3x" aria-hidden="true" (click)="backGroup()"></button>
-			<button class="fa fa-arrow-right fa-3x" aria-hidden="true" (click)="nextGroup()"></button> -->
 		</div>
 	</div>
 	<div class="row">
+
 		<div id="myCarousel" class="carousel slide" data-ride="carousel" data-interval="false">
 		  <!-- Indicators -->
 		  <ol class="carousel-indicators">
@@ -79,6 +78,14 @@
 
 				</div>
 			</div>
+
+			<!-- Controls -->
+			<a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+				<i class="fa fa-angle-left fa-3x left-icon" aria-hidden="true"></i>
+			</a>
+			<a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+				<i class="fa fa-angle-right fa-3x right-icon" aria-hidden="true" style="left: 15%"></i>
+			</a>
 		</div>
 	</div>
 </section>
