--- a/src/app/pages/news-detail/news-detail.component.html
+++ b/src/app/pages/news-detail/news-detail.component.html
@@ -12,39 +12,68 @@
 	</div>
 </section>
 <section id="othersservice" class="othersservice">
-	<div class="container">
-		<div class="row">
-			<div class="col-sm-12">
-				<div class="head_title" style="margin-top:50px;margin-bottom:0;">
-					<h3 class="text-center" style="font-size: 2.5rem;line-height: initial;" >{{news?.title}}</h3>
-					<div class="separator"></div>
+	<div class="container" [ngSwitch]="news?.is_formated">
+
+
+		<div class="body-news" *ngSwitchCase="false">
+			<div class="row">
+				<div class="col-sm-12">
+					<div class="head_title" style="margin-top:50px;margin-bottom:0;">
+						<h3 class="text-center" style="font-size: 2.5rem;line-height: initial;" >{{news?.title}}</h3>
+						<div class="separator"></div>
+					</div>
 				</div>
 			</div>
-		</div>
-		<div class="row">
-			<div class="col-sm12 text-center">
-				<h4 style="font-size: 1.8rem;line-height: initial;">{{news?.subTitle}}</h4>
+			<div class="row">
+				<div class="col-sm12 text-center">
+					<h4 style="font-size: 1.8rem;line-height: initial;">{{news?.subTitle}}</h4>
+				</div>
 			</div>
-		</div>
-		<div class="row">
-			<div class="col-sm-12">
-				<span class="concilia-credit">
-					<i class="fa fa-user"></i>
-					&nbsp;&nbsp;{{news?.creditsImage}}
-				</span>
-				<img src="{{news?.image}}" alt="" style="width: inherit;">
-				<span class="concilia-caption">
-					<i class="fa fa-camera"></i>
-					&nbsp;&nbsp;{{news?.legendImage}}
-				</span>
+			<div class="row">
+				<div class="col-sm-12">
+					<span class="concilia-credit">
+						<i class="fa fa-user"></i>
+						&nbsp;&nbsp;{{news?.creditsImage}}
+					</span>
+					<img src="{{news?.image}}" alt="" style="width: inherit;">
+					<span class="concilia-caption">
+						<i class="fa fa-camera"></i>
+						&nbsp;&nbsp;{{news?.legendImage}}
+					</span>
 
+				</div>
+			</div>
+			<div class="row" style="margin-top:50px; margin-bottom:50px">
+				<!-- Conteúdo da notícia sendo recebido como html e não como string -->
+				<div id="content-news" class="col-sm-12" [innerHTML]="news?.text" style="font-size: 1.24rem!important;"></div>
+				<!-- Fim do conteúdo da notícia -->
 			</div>
 		</div>
-		<div class="row" style="margin-top:50px; margin-bottom:50px">
-			<!-- Conteúdo da notícia sendo recebido como html e não como string -->
-			<div id="content-news" class="col-sm-12" [innerHTML]="news?.text" style="font-size: 1.24rem!important;"></div>
-			<!-- Fim do conteúdo da notícia -->
+
+
+		<div class="body-news" *ngSwitchCase="true">
+			<div class="row">
+				<div class="col-sm-12">
+					<div class="head_title" style="margin-top:50px;margin-bottom:0;">
+						<h3 class="text-center" style="font-size: 2.5rem;line-height: initial;" >{{news?.title}}</h3>
+						<div class="separator"></div>
+					</div>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-sm12 text-center">
+					<h4 style="font-size: 1.8rem;line-height: initial;">{{news?.subTitle}}</h4>
+				</div>
+			</div>
+
+			<div class="row" style="margin-top:50px; margin-bottom:50px">
+				<!-- Conteúdo da notícia sendo recebido como html e não como string -->
+				<div id="content-news" class="col-sm-12" [innerHTML]="news?.text" style="font-size: 1.24rem!important;"></div>
+				<!-- Fim do conteúdo da notícia -->
+			</div>
 		</div>
+		
+		
 		<div class="row">
 			<div class="col-md-12" style="font-size: 1.24rem">
 				Data da notícia: {{news?.published_at | humanizeDate}} <br />
