--- a/src/app/pages/news-detail/news-detail.component.css
+++ b/src/app/pages/news-detail/news-detail.component.css
@@ -40,3 +40,7 @@
 	background: #ff7200;
 	content: "";
 }
+.concilia-caption, .concilia-credit{
+	font-size: 0.875rem!important;
+	color: #444!important;
+}
