--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -44,25 +44,25 @@
 			<div class="row">
 				<div class="col-md-2">
 					<p class="label-rodape">Apoio:</p>
-					<a href="#" target="_blank" title="" style="text-decoration:none;">
+					<a href="http://comunidadecmar.blogspot.com.br" target="_blank" title="" style="text-decoration:none;">
 						<img class="footer-image-apoio img-responsive" src="assets/images/logomarcas/CMAR2.png" alt="" />
 					</a>
 				</div>
 				<div class="col-md-offset-1 col-md-8">
 					<p class="label-rodape">Parceria:</p>
-					<a href="#" target="_blank" title="" style="text-decoration:none;">
+					<a href="http://portalpbh.pbh.gov.br/pbh/ecp/comunidade.do?app=urbel" target="_blank" title="" style="text-decoration:none;">
 						<img class="footer-image-apoio img-responsive" src="assets/images/logomarcas/1.png" alt="" style="display:inline-block;margin-right:17px;"/>
 					</a>
 
-					<a href="#" target="_blank" title="" style="text-decoration:none;">
+					<a href="http://portalpbh.pbh.gov.br/pbh/" target="_blank" title="" style="text-decoration:none;">
 						<img class="footer-image-apoio img-responsive" src="assets/images/logomarcas/2.png" alt="" style="display:inline-block;margin-right:34px;"/>
 					</a>
 
-					<a href="#" target="_blank" title="" style="text-decoration:none;">
+					<a href="http://www.dpu.def.br" target="_blank" title="" style="text-decoration:none;">
 						<img class="footer-image-apoio img-responsive" src="assets/images/logomarcas/3.png" alt="" style="display:inline-block;margin-right:34px;"/>
 					</a>
 
-					<a href="#" target="_blank" title="" style="text-decoration:none;">
+					<a href="http://www.mpf.mp.br/mg" target="_blank" title="" style="text-decoration:none;">
 						<img class="footer-image-apoio img-responsive" src="assets/images/logomarcas/4.png" alt="" style="display:inline-block;margin-right:34px;"/>
 					</a>
 				</div>
@@ -70,15 +70,15 @@
 			<div class="row">
 				<div class="col-md-12">
 					<p class="label-rodape">Realização:</p>
-					<a href="#" target="_blank" title="" style="text-decoration:none;">
+					<a href="https://portal.trf1.jus.br/sjmg" target="_blank" title="" style="text-decoration:none;">
 						<img class="footer-image-realizacao img-responsive" src="assets/images/logomarcas/realizacao/1.png" alt="" style="display:inline-block;margin-right:17px;"/>
 					</a>
 
-					<a href="#" target="_blank" title="" style="text-decoration:none;">
+					<a href="http://www.dnit.gov.br" target="_blank" title="" style="text-decoration:none;">
 						<img class="footer-image-realizacao img-responsive" src="assets/images/logomarcas/realizacao/2.png" alt="" style="display:inline-block;margin-right:17px;"/>
 					</a>
 
-					<a href="#" target="_blank" title="" style="text-decoration:none;">
+					<a href="http://www.transportes.gov.br" target="_blank" title="" style="text-decoration:none;">
 						<img class="footer-image-realizacao img-responsive" src="assets/images/logomarcas/realizacao/3.png" alt="" style="display:inline-block;margin-right:34px;"/>
 					</a>
 
